wrote register page and started leaderboard page

--- a/ChordGuessr/register.html
+++ b/ChordGuessr/register.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChordGuessr - Home</title>
+    <title>ChordGuessr - Register</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <center>
     <nav>
@@ -14,25 +13,22 @@
         <a href="leaderboard.html">Leaderboard</a>
         <a href="help.html">Help</a>
     </nav>
-    
     <br>
-
-    <h1>ChordGuessr</h1>
-    <p>Test your musical knowledge!</p>    
-    <br>
-    <p>Sign in or create an account to get started:</p>
-    <br>
+    <h1>Create your account:</h1>
     <form>
         <p>Username: <input></p>
-        <p>Password: <input type="password"> </p>
+        <p>E-mail: <input></p>
+        <p>Create password: <input type="password"></p>
+        <p>Confirm password: <input type="password"></p>
+        <button>Submit</button>
     </form>
-    <br>
-    <p>Don't have an account? <a href="register.html">Register</a></p>
-    <p>OR</p>
-    <p>Play as a guest</p>
     </center>
 
+
+
+
 </body>
+
 
 
 
