implemented css with classes

--- a/ChordGuessr/game.html
+++ b/ChordGuessr/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChordGuessr - Help</title>
+    <title>ChordGuessr - Play</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
