--- a/ChordGuessr/help.html
+++ b/ChordGuessr/help.html
@@ -16,17 +16,16 @@
     </nav>
     <br>
     <h1>How to play?</h1>
+    <br>
+    <h2 class="EasyMode">Easy mode</h2>
+    <p class="EasyDesc">For this mode, you only have to guess from one of two types of chords; Major (sounds happy/hopeful) and Minor (sad/dark)</p>
+    <br>
+    <h2 class="MediumMode">Medium mode</h2>
+    <p class="MediumDesc">You now have three types of chords to guess from; Major, Minor and Diminished. A diminished chord sounds tense, spooky or unstable.</p>
+    <br>
+    <h2 class="AdvancedMode">Advanced mode</h2>
+    <p class="AdvancedDesc">Advanced mode has the same three chords from medium. However, you also need to guess the root note of the chord. For example: C major, where C is the root note.</p>
     </center>
-    <br>
-    <h2>Easy mode</h2>
-    <p>For this mode, you only have to guess from one of two types of chords; Major (sounds happy/hopeful) and Minor (sad/dark)</p>
-    <br>
-    <h2>Medium mode</h2>
-    <p>You now have three types of chords to guess from; Major, Minor and Diminished. A diminished chord sounds tense, spooky or unstable.</p>
-    <br>
-    <h2>Advanced mode</h2>
-    <p>Advanced mode has the same three chords from medium. However, you also need to guess the root note of the chord. For example: C major, where C is the root note.</p>
-
 
 
 </body>
