updated header and index

--- a/ChordGuessr/register.html
+++ b/ChordGuessr/register.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center>
+    <header>
     <nav>
         <a href="index.html">Home</a>
         <a href="game.html">Play</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="help.html">Help</a>
     </nav>
+    </header>
     <br>
     <h1>Create your account:</h1>
     <form>
@@ -22,7 +23,6 @@
         <p>Confirm password: <input type="password"></p>
         <button>Submit</button>
     </form>
-    </center>
 
 
 
