--- a/ChordGuessr/game.html
+++ b/ChordGuessr/game.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-    <center>
+    <header>
     <nav>
         <a href="index.html">Home</a>
         <a href="game.html">Play</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="help.html">Help</a>
     </nav>
-    </center>
+    </header>
 </body>
 
 </html>
