--- a/ChordGuessr/help.html
+++ b/ChordGuessr/help.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-    <center>
+    <header>
     <nav>
         <a href="index.html">Home</a>
         <a href="game.html">Play</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="help.html">Help</a>
+    </header>
     </nav>
     <br>
     <h1>How to play?</h1>
     <br>
+    <center>
     <h2 class="EasyMode">Easy mode</h2>
     <p class="EasyDesc">For this mode, you only have to guess from one of two types of chords; Major (sounds happy/hopeful) and Minor (sad/dark)</p>
     <br>
