--- a/ChordGuessr/index.html
+++ b/ChordGuessr/index.html
@@ -7,31 +7,30 @@
 </head>
 
 <body>
-    <center>
+    <header>
     <nav>
         <a href="index.html">Home</a>
         <a href="game.html">Play</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="help.html">Help</a>
     </nav>
-    
+    </header>
     <br>
-
-    <h1>ChordGuessr</h1>
-    <p>Test your musical knowledge!</p>    
-    <br>
-    <p>Sign in or create an account to get started:</p>
-    <br>
-    <form>
-        <p>Username: <input></p>
-        <p>Password: <input type="password"> </p>
-    </form>
-    <br>
-    <p>Don't have an account? <a href="register.html">Register</a></p>
-    <p>OR</p>
-    <p>Play as a guest</p>
-    </center>
-
+    <div class="HomeLogin">
+        <h1 class="HomeHeader">ChordGuessr</h1>
+        <p>Test your musical knowledge!</p>    
+        <br>
+        <p>Sign in or create an account to get started:</p>
+        <br>
+        <form>
+            <p>Username: <input></p>
+            <p>Password: <input type="password"> </p>
+        </form>
+        <br>
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+        <p>OR</p>
+        <p>Play as a guest</p>
+    </div>
 </body>
 
 
