--- a/ChordGuessr/leaderboard.html
+++ b/ChordGuessr/leaderboard.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center>
+    <header>
         <nav>
         <a href="index.html">Home</a>
         <a href="game.html">Play</a>
         <a href="leaderboard.html">Leaderboard</a>
         <a href="help.html">Help</a>
     </nav>
-    </center>
+    </header>
     <h1></h1>
 
 
