--- a/ChordGuessr/help.html
+++ b/ChordGuessr/help.html
@@ -20,7 +20,7 @@
     <br>
     <center>
     <h2 class="EasyMode">Easy mode</h2>
-    <p class="EasyDesc">For this mode, you only have to guess from one of two types of chords; Major (sounds happy/hopeful) and Minor (sad/dark)</p>
+    <p class="EasyDesc">For this mode, you only have to guess from one of two types of chords; Major (sounds happy/hopeful) and Minor (sad/dark).</p>
     <br>
     <h2 class="MediumMode">Medium mode</h2>
     <p class="MediumDesc">You now have three types of chords to guess from; Major, Minor and Diminished. A diminished chord sounds tense, spooky or unstable.</p>
