--- a/ChordGuessr/index.html
+++ b/ChordGuessr/index.html
@@ -22,14 +22,16 @@
         <br>
         <p>Sign in or create an account to get started:</p>
         <br>
-        <form>
-            <p>Username: <input></p>
-            <p>Password: <input type="password"> </p>
-        </form>
-        <br>
-        <p>Don't have an account? <a href="register.html">Register</a></p>
-        <p>OR</p>
-        <p>Play as a guest</p>
+        <div class="loginForm">
+            <form>
+                <p>Username: <input></p>
+                <p>Password: <input type="password"> </p>
+            </form>
+            <br>
+            <p>Don't have an account? <a href="register.html">Register</a></p>
+            <p>OR</p>
+            <p>Play as a guest</p>
+        </div>
     </div>
 </body>
 
