--- a/ChordGuessr-1/ChordGuessr/leaderboard.html
+++ b/ChordGuessr-1/ChordGuessr/leaderboard.html
@@ -14,8 +14,13 @@
         <a href="help.html">Help</a>
     </nav>
     </header>
-    <h1></h1>
-
+    <h1 class="LBHeader">Leaderboards</h1>
+    <br>
+    <div class="LeaderboardTitles">
+        <h2 class="LBEasy">Easy</h2>
+        <h2 class="LBMedium">Medium</h2>
+        <h2 class="LBAdvanced">Advanced</h2>
+    </div>
 
 
 
