--- a/ChordGuessr-1/ChordGuessr/leaderboard.html
+++ b/ChordGuessr-1/ChordGuessr/leaderboard.html
@@ -17,12 +17,21 @@
     <h1 class="LBHeader">Leaderboards</h1>
     <br>
     <div class="LeaderboardTitles">
+    <div class="LeaderboardSection">
         <h2 class="LBEasy">Easy</h2>
-        <h2 class="LBMedium">Medium</h2>
-        <h2 class="LBAdvanced">Advanced</h2>
+        <ul id="easy-leaderboard"></ul>
     </div>
+    <div class="LeaderboardSection">
+        <h2 class="LBMedium">Medium</h2>
+        <ul id="medium-leaderboard"></ul>
+    </div>
+    <div class="LeaderboardSection">
+        <h2 class="LBAdvanced">Advanced</h2>
+        <ul id="advanced-leaderboard"></ul>
+    </div>
+</div>
 
 
-
+    <script src="leaderboard.js"></script>
 </body>
 </html>
