--- a/ChordGuessr-1/ChordGuessr/game.html
+++ b/ChordGuessr-1/ChordGuessr/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ChordGuessr - Play</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
