code cleaning, removed commented codes etc

--- a/ChordGuessr-1/ChordGuessr/index.html
+++ b/ChordGuessr-1/ChordGuessr/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>ChordGuessr - Home</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon">
+    <!-- favicon -->
+    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon"> 
 </head>
 
 <body>
@@ -26,6 +27,7 @@
             <div class="loginForm">
                 <form id="loginForm">
                     <center>
+                    <!-- these labels will be hidden when user is logged in -->
                     <div class="loginLabels">
                     <label>Username: <input type="text" id="loginUsername"></label>
                     <label>Password: <input type="password" id="loginPassword"></label>
