file organization, added logo to homepage, experimenting with color schemes

--- a/ChordGuessr-1/HTML/index.html
+++ b/ChordGuessr-1/HTML/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ChordGuessr - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <!-- favicon -->
-    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon"> 
+    <link rel="icon" href="../assets/trebleclef.jpeg" type="image/x-icon"> 
 </head>
 
 <body>
@@ -18,7 +18,10 @@
     </nav>
     </header>
     <br>
+        <div class="homeHeader">
+        <img src="../assets/trebleclef.jpeg" class="logo">
         <h1 class="HomeHeader">ChordGuessr</h1>
+        </div>
         <div class="HomeLogin">
             <p>Test your musical knowledge!</p>    
             <br>
@@ -46,7 +49,7 @@
             </div>
         </div>
 
-<script src="loginregister.js"></script>
+<script src="../JS/loginregister.js"></script>
 </body>
 
 </html>
