--- a/ChordGuessr-1/HTML/register.html
+++ b/ChordGuessr-1/HTML/register.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ChordGuessr - Register</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="../assets/trebleclef.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
     </form>
     </center>
 
-<script src="loginregister.js"></script>
+<script src="../JS/loginregister.js"></script>
 </body>
 
 
