--- a/ChordGuessr-1/HTML/game.html
+++ b/ChordGuessr-1/HTML/game.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ChordGuessr - Play</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="../assets/trebleclef.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -53,6 +53,6 @@
             </div>
         </div>
     </main>
-<script src="game.js"></script>
+<script src="../JS/game.js"></script>
 </body>
 </html>
