--- a/ChordGuessr-1/HTML/help.html
+++ b/ChordGuessr-1/HTML/help.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ChordGuessr - Help</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="../assets/trebleclef.jpeg" type="image/x-icon">
 </head>
 
 <body>
