--- a/ChordGuessr-1/HTML/leaderboard.html
+++ b/ChordGuessr-1/HTML/leaderboard.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ChordGuessr - Leaderboards</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/trebleclef.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" href="../assets/trebleclef.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -31,6 +31,6 @@
         <ul id="advanced-leaderboard"></ul>
     </div>
 </div>
-<script src="leaderboard.js"></script>
+<script src="../JS/leaderboard.js"></script>
 </body>
 </html>
