implemented modules and classes to organize files

--- a/ChordGuessr-1/HTML/game.html
+++ b/ChordGuessr-1/HTML/game.html
@@ -53,6 +53,6 @@
             </div>
         </div>
     </main>
-<script src="../JS/game.js"></script>
+<script type="module" src="../JS/game.js"></script>
 </body>
 </html>
