--- a/ChordGuessr-1/HTML/index.html
+++ b/ChordGuessr-1/HTML/index.html
@@ -19,11 +19,11 @@
     </header>
     <br>
         <div class="homeHeader">
-        <img src="../assets/trebleclef.jpeg" class="logo">
-        <h1 class="HomeHeader">ChordGuessr</h1>
+            <img src="../assets/trebleclef.jpeg" class="logo">
+            <h1 class="HomeHeader">ChordGuessr</h1>
         </div>
         <div class="HomeLogin">
-            <p>Test your musical knowledge!</p>    
+            <p class="homePhrase">Test your musical knowledge!</p>    
             <br>
             <p>Sign in or create an account to get started:</p>
             <br>
