--- a/ChordGuessr-1/HTML/leaderboard.html
+++ b/ChordGuessr-1/HTML/leaderboard.html
@@ -31,6 +31,6 @@
         <ul id="advanced-leaderboard"></ul>
     </div>
 </div>
-<script src="../JS/leaderboard.js"></script>
+<script src="../JS/leaderboardDisplay.js"></script>
 </body>
 </html>
