added age field and fixed css for forms

--- a/ChordGuessr-1/HTML/index.html
+++ b/ChordGuessr-1/HTML/index.html
@@ -32,8 +32,11 @@
                     <center>
                     <!-- these labels will be hidden when user is logged in -->
                     <div class="loginLabels">
-                    <label>Username: <input type="text" id="loginUsername"></label>
-                    <label>Password: <input type="password" id="loginPassword"></label>
+                        <label for="loginUsername">Username:</label>
+                        <input type="text" id="loginUsername">
+                        
+                        <label for="loginPassword">Password:</label>
+                        <input type="password" id="loginPassword">
                     </div>
                     </center>
                     <button type="submit" class="loginButton">Login</button>
